refactor: modernization to Java 25 & Jakarta EE 11 standards
- Migration of DTOs to Java Records for immutability.
- Adoption of functional/declarative style (Stream API, Optional).
- Usage of unnamed variables (_) for exceptions and lambdas (Java 22+).
- Jakarta EE 11 Optimization: Virtual Threads via @ManagedExecutorDefinition.
- Jakarta Data 1.0 Standardization: @Repository interfaces extending BasicRepository.
- Jakarta Persistence 3.2 Simplification: lightweight JPQL queries.
- Surgical fix of PMD 7 violations (variable names, explicit types, constructors).
- Bug fixes (restored missing PaymentResult class, fixed imports and Maven dependencies).