@@ -1,13 +1,12 @@
 package com.lemzo.ecommerce.domain.inventory.api;
 
-import com.lemzo.ecommerce.core.api.security.HasPermission;
-import com.lemzo.ecommerce.core.api.security.ResourceType;
-import com.lemzo.ecommerce.core.api.security.PbacAction;
 import com.lemzo.ecommerce.core.api.hateoas.HateoasMapper;
+import com.lemzo.ecommerce.core.api.security.HasPermission;
+import com.lemzo.ecommerce.core.api.security.PbacAction;
+import com.lemzo.ecommerce.core.api.security.ResourceType;
 import com.lemzo.ecommerce.domain.inventory.api.dto.StockResponse;
 import com.lemzo.ecommerce.domain.inventory.api.dto.StockUpdateRequest;
 import com.lemzo.ecommerce.domain.inventory.service.InventoryService;
-import com.lemzo.ecommerce.domain.inventory.repository.StockRepository;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
 import jakarta.ws.rs.*;
@@ -15,41 +14,36 @@ import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.core.UriInfo;
+import lombok.RequiredArgsConstructor;
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 import org.eclipse.microprofile.openapi.annotations.Operation;
-import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
-import org.eclipse.microprofile.openapi.annotations.security.SecurityRequirement;
 import org.eclipse.microprofile.openapi.annotations.tags.Tag;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
- * Ressource JAX-RS pour la gestion des stocks.
+ * Ressource pour la gestion des stocks.
  */
-@Path("/inventory/stocks")
+@Path("/inventory")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
-@Tag(name = "Inventaire", description = "Gestion des niveaux de stock")
-@SecurityRequirement(name = "jwt")
+@Tag(name = "Inventaire", description = "Gestion des stocks produits")
+@RequiredArgsConstructor(onConstructor_ = {@Inject})
+@NoArgsConstructor(access = AccessLevel.PROTECTED, force = true)
 public class InventoryResource {
 
-    @Inject
-    private InventoryService inventoryService;
-
-    @Inject
-    private StockRepository stockRepository;
-
-    @Inject
-    private HateoasMapper hateoasMapper;
+    private final InventoryService inventoryService;
+    private final HateoasMapper hateoasMapper;
 
     @Context
     private UriInfo uriInfo;
 
     @GET
     @Path("/{productId}")
-    @HasPermission(resource = ResourceType.INVENTORY, action = PbacAction.READ)
-    @Operation(summary = "Consulter le stock", description = "Retourne l'état du stock avec liens hypermédias")
-    @APIResponse(responseCode = "200", description = "Stock trouvé")
-    public Response getStock(@PathParam("productId") UUID productId) {
-        return stockRepository.findByProductId(productId)
+    @Operation(summary = "Consulter le stock d'un produit")
+    public Response getStock(@PathParam("productId") final UUID productId) {
+        return inventoryService.getStockByProduct(productId)
                 .map(StockResponse::from)
                 .map(res -> hateoasMapper.toResource(res, uriInfo))
                 .map(res -> Response.ok(res).build())
@@ -57,25 +51,22 @@ public class InventoryResource {
     }
 
     @GET
-    @Path("/alerts")
-    @HasPermission(resource = ResourceType.INVENTORY, action = PbacAction.READ)
-    @Operation(summary = "Lister les alertes stock", description = "Retourne les produits dont le stock est inférieur ou égal au seuil d'alerte")
-    public Response getAlerts() {
-        var lowStocks = inventoryService.getLowStocks();
-        var responses = lowStocks.stream()
+    @Path("/low-stock")
+    @HasPermission(resource = ResourceType.PLATFORM, action = PbacAction.READ)
+    @Operation(summary = "Lister les produits en rupture ou stock faible")
+    public Response getLowStocks() {
+        final var lowStocks = inventoryService.getLowStocks().stream()
                 .map(StockResponse::from)
-                .map(res -> hateoasMapper.toResource(res, uriInfo))
-                .toList();
-        return Response.ok(responses).build();
+                .collect(Collectors.toList());
+        return Response.ok(hateoasMapper.toResource(lowStocks, uriInfo)).build();
     }
 
-    @PATCH
+    @PUT
     @Path("/{productId}")
-    @HasPermission(resource = ResourceType.INVENTORY, action = PbacAction.UPDATE)
-    @Operation(summary = "Ajuster le stock", description = "Ajoute ou retire une quantité du stock existant")
-    @APIResponse(responseCode = "204", description = "Stock mis à jour")
-    public Response updateStock(@PathParam("productId") UUID productId, @Valid StockUpdateRequest request) {
-        inventoryService.updateStock(productId, request.quantityChange());
-        return Response.noContent().build();
+    @HasPermission(resource = ResourceType.PLATFORM, action = PbacAction.UPDATE)
+    @Operation(summary = "Mettre à jour manuellement le stock")
+    public Response updateStock(@PathParam("productId") final UUID productId, @Valid final StockUpdateRequest request) {
+        final var stock = inventoryService.setStock(productId, request.quantity(), request.lowStockThreshold());
+        return Response.ok(hateoasMapper.toResource(StockResponse.from(stock), uriInfo)).build();
     }
 }
